# opentelemetry-skb

./: .gitignore  CMakeLists.txt  README.md
doc/: design.md  roadmap.md
hack/: jaeger.sh  run.sh
misc/: CMakeLists.txt
misc/data-example/: trace2.json
misc/docker-compose/: docker-compose.yaml
misc/func-list/: arg_pos.txt  func_list.txt  trace.yaml
src/: CMakeLists.txt  go.sum  main.go
src/bpf/: CMakeLists.txt  btf.go  endian.go  insn.go  main.c  prog.go  ringbuf.go  stack.c  stack.skel.h  type.go
src/cmd/btf/: main.go
src/cmd/double-attach/: main.go
src/cmd/example-asm/: main.go
src/cmd/ingest/: main.go
src/cmd/kallsyms/: main.go
src/kallsyms/: method.go
src/parse/: ingest.go  parse.go  stack.go  trace.go  type.go
src/shared/: event.h  vmlinux.h
src/test/: CMakeLists.txt  test_btf.c  test_curl.c  test_event.c  test_find_kallsyms.c  test_get_args.c  test_insn.c  test_otlp.c
src/test/data-example/: trace.json
src/user/: CMakeLists.txt  otlp.c  otlp.h  trace_helpers.c  trace_helpers.h
